# slacky

./: .gitignore  Makefile  README.md  pyproject.toml
src/slackli/: cli.py  client.py  formatters.py
src/slacky/: cli.py  client.py  formatters.py
tests/: test_client.py
