[project]
name = "slackli"
version = "0.1.0"
description = "Slack CLI client for messaging, threads, and search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
slackli = "slackli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slackli"]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["I", "E", "F", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["slackli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
